fix: sonar cloud issues fix
Refs: XRDDEV-2554